<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        tools:context=".views.MenuScreen"
        tools:ignore="ExtraText">

        <ImageButton

            android:layout_width="115dp"
            android:layout_height="57dp"

            android:layout_alignRight="@id/btnsContainer"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="274dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="22dp"
            android:layout_marginRight="22dp"
            android:background="@color/colorAccent"
            android:onClick="backToLogin"
            android:src="@drawable/back_to_login" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="274dp"
            android:layout_height="229dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="30dp"
            android:background="@android:color/white"
            android:elevation="25dp"
            app:cardCornerRadius="17dp">

            <ImageView
                android:id="@+id/menuPicImg"
                android:layout_width="305dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:src="@drawable/src_scanning" />

        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:id="@+id/btnsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardView"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addNewSampleButton"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_margin="10dp"
                android:width="150dp"
                android:background="@drawable/rounded_button_blue"
                android:text="@string/open_qr_reader"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="17sp"


                />

            <Button
                android:id="@+id/newSrcButton"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_margin="10dp"
                android:width="150dp"
                android:background="@drawable/rounded_button_blue"
                android:text="@string/save_src_sample"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="17sp"

                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/towButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnsContainer"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addOnSiteTestButton"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_margin="10dp"
                android:width="150dp"
                android:background="@drawable/rounded_button_blue"
                android:text="@string/on_site_test"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="17sp"

                />

            <Button
                android:id="@+id/addBrokenPointButton"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_margin="10dp"
                android:width="150dp"
                android:background="@drawable/rounded_button_blue"
                android:text="@string/add_broken_point"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="17sp"

                />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/idFab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/towButton"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="end"
            android:orientation="horizontal">
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/trackLocsFab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="end"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/tracing_locations_display"
                android:paddingTop="10dp"
                android:src="@drawable/edit_location"
                app:fabSize="normal"
                app:elevation="6dp"
                app:backgroundTint="@color/colorPrimaryDark"
                app:pressedTranslationZ="12dp" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>